--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@sentry/react-native": "^1.4.2",
     "react": "16.9.0",
     "react-native": "0.61.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.1.0",
-    "eslint": "^7.4.0",
-    "jest": "^26.1.0",
-    "metro-react-native-babel-preset": "^0.60.0",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "eslint": "^6.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.55.0",
+    "react-test-renderer": "^16.8.6"
   },
   "jest": {
     "preset": "react-native"
